--- a/ProjectosUnad2/MainWindow.xaml
+++ b/ProjectosUnad2/MainWindow.xaml
@@ -7,21 +7,20 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid Margin="0,0,-44,-16">
-        <StackPanel Margin="20,20,43,10">
-            <Label Content="Horas Trabajadas:" />
-            <TextBox x:Name="txtHoras" />
+        <StackPanel Margin="20">
+            <Label Content="Sueldo:" />
+            <TextBox x:Name="txtSueldo" />
 
-            <Label Content="Tarifa por Hora:" />
-            <TextBox x:Name="txtTarifa" />
+            <Button Content="Calcular Descuento" Click="BtnCalcular_Click" Margin="0,10" />
 
-            <Button Content="Calcular Salario" Click="BtnCalcular_Click" Margin="0,10" />
+            <Label Content="Descuento:" />
+            <TextBox x:Name="txtDescuento" IsReadOnly="True" />
 
-            <Label Content="Salario:" />
-            <TextBox x:Name="txtSalario" IsReadOnly="True" />
+            <Label Content="Sueldo Neto:" />
+            <TextBox x:Name="txtSueldoNeto" IsReadOnly="True" />
 
             <Label x:Name="lblMensaje" Content="" Foreground="Red" />
         </StackPanel>
-        
 
     </Grid>
 </Window>
