--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,19 +1,18 @@
-﻿<Window x:Class="ejer4.MainWindow"
+﻿<Window x:Class="ejer5.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer4"
+        xmlns:local="clr-namespace:ejer5"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
         <StackPanel Margin="10">
-            <Label Content="Ingrese el tiempo en segundos:"/>
-            <TextBox x:Name="txtSegundos"/>
+            <Label Content="Ingrese el tiempo en minutos:"/>
+            <TextBox x:Name="txtMinutos"/>
             <Button Content="Convertir" Click="Button_Click"/>
             <Label x:Name="lblResultado" Margin="0,10,0,0"/>
+            <Label x:Name="lblDetalles" Margin="0,5,0,0"/>
         </StackPanel>
-
     </Grid>
 </Window>
