--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,20 +1,17 @@
-﻿<Window x:Class="ejer6.MainWindow"
+﻿<Window x:Class="ejer7.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer6"
+        xmlns:local="clr-namespace:ejer7"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="20">
-            <Label Content="Enter Number N:" />
-            <TextBox x:Name="NumberTextBox" />
-            <Button Content="Calculate Sum" Click="CalculateSum_Click" Margin="0,10" />
-            <Label Content="Series:" />
-            <TextBox x:Name="SeriesTextBox" IsReadOnly="True" Height="100" VerticalScrollBarVisibility="Auto" />
-            <Label Content="Sum:" />
-            <TextBox x:Name="SumTextBox" IsReadOnly="True" />
+            <Label Content="Cantidad de trabajadores:" />
+            <TextBox x:Name="NumTrabajadoresTextBox" />
+            <Button Content="Calcular Salarios" Click="CalcularSalarios_Click" Margin="0,10" />
+            <TextBox x:Name="OutputTextBox" IsReadOnly="True" Height="250" VerticalScrollBarVisibility="Auto" />
         </StackPanel>
     </Grid>
 </Window>
