--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,19 +1,22 @@
-﻿<Window x:Class="ejer8.MainWindow"
+﻿<Window x:Class="ejer9.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer8"
+        xmlns:local="clr-namespace:ejer9"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="10">
-            <Label Content="Ingrese el tiempo en minutos:"/>
-            <TextBox x:Name="txtMinutos"/>
-            <Button Content="Convertir" Click="Button_Click"/>
-            <Label x:Name="lblResultado" Margin="0,10,0,0"/>
-            <Label x:Name="lblDetalles" Margin="0,5,0,0"/>
+            <Label Content="Introduce la nota:"/>
+            <TextBox x:Name="txtNota"/>
+            <CheckBox x:Name="chkOtraNota" Content="¿Deseas ingresar otra nota?" Margin="0,5,0,0"/>
+            <Button Content="Calcular" Click="Button_Click"/>
+            <Label x:Name="lblDesaprobadas" Margin="0,10,0,0"/>
+            <Label x:Name="lblAprobadas" Margin="0,5,0,0"/>
+            <Label x:Name="lblPromedioAprobadas" Margin="0,5,0,0"/>
+            <Label x:Name="lblPromedioDesaprobadas" Margin="0,5,0,0"/>
+            <Label x:Name="lblPromedioFinal" Margin="0,5,0,0"/>
         </StackPanel>
-
     </Grid>
 </Window>
