--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,22 +1,17 @@
-﻿<Window x:Class="ejer9.MainWindow"
+﻿<Window x:Class="ejer10.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer9"
+        xmlns:local="clr-namespace:ejer10"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="10">
-            <Label Content="Introduce la nota:"/>
-            <TextBox x:Name="txtNota"/>
-            <CheckBox x:Name="chkOtraNota" Content="¿Deseas ingresar otra nota?" Margin="0,5,0,0"/>
-            <Button Content="Calcular" Click="Button_Click"/>
-            <Label x:Name="lblDesaprobadas" Margin="0,10,0,0"/>
-            <Label x:Name="lblAprobadas" Margin="0,5,0,0"/>
-            <Label x:Name="lblPromedioAprobadas" Margin="0,5,0,0"/>
-            <Label x:Name="lblPromedioDesaprobadas" Margin="0,5,0,0"/>
-            <Label x:Name="lblPromedioFinal" Margin="0,5,0,0"/>
+            <Label Content="Inserte un numero:"/>
+            <TextBox x:Name="txtNumero"/>
+            <Button Content="Calcola Somma" Click="Button_Click"/>
+            <Label x:Name="lblSomma" Margin="0,10,0,0"/>
         </StackPanel>
     </Grid>
 </Window>
