--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,17 +1,24 @@
-﻿<Window x:Class="ejer10.MainWindow"
+﻿<Window x:Class="ejer11.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer10"
+        xmlns:local="clr-namespace:ejer11"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="10">
-            <Label Content="Inserte un numero:"/>
-            <TextBox x:Name="txtNumero"/>
-            <Button Content="Calcola Somma" Click="Button_Click"/>
-            <Label x:Name="lblSomma" Margin="0,10,0,0"/>
+            <Label Content="Ingrese el precio:"/>
+            <TextBox x:Name="txtPrecio"/>
+            <Label Content="Ingrese número de artículos:"/>
+            <TextBox x:Name="txtArticulos"/>
+            <Button Content="Calcular Factura" Click="Button_Click"/>
+            <Label Content="Datos de la factura:" Margin="0,10,0,0"/>
+            <Label x:Name="lblPrecioVenta"/>
+            <Label x:Name="lblIVA"/>
+            <Label x:Name="lblPrecioBruto"/>
+            <Label x:Name="lblDescuento"/>
+            <Label x:Name="lblTotalPagar"/>
         </StackPanel>
     </Grid>
 </Window>
