--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,24 +1,19 @@
-﻿<Window x:Class="ejer12.MainWindow"
+﻿<Window x:Class="ejer13.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer12"
+        xmlns:local="clr-namespace:ejer13"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <StackPanel Margin="10">
-            <Label Content="Ingrese el precio:"/>
-            <TextBox x:Name="txtPrecio"/>
-            <Label Content="Ingrese número de artículos:"/>
-            <TextBox x:Name="txtArticulos"/>
-            <Button Content="Calcular Factura" Click="Button_Click"/>
-            <Label Content="Datos de la factura:" Margin="0,10,0,0"/>
-            <Label x:Name="lblPrecioVenta"/>
-            <Label x:Name="lblIVA"/>
-            <Label x:Name="lblPrecioBruto"/>
-            <Label x:Name="lblDescuento"/>
-            <Label x:Name="lblTotalPagar"/>
+        <StackPanel Margin="20">
+            <Label Content="Ingrese un número:" />
+            <TextBox x:Name="NumeroTextBox" />
+            <Button Content="Calcular Factorial" Click="CalcularFactorial_Click" Margin="0,10" />
+            <Label Content="Resultado:" />
+            <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" />
         </StackPanel>
+
     </Grid>
 </Window>
