--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,19 +1,15 @@
-﻿<Window x:Class="ejer13.MainWindow"
+﻿<Window x:Class="ejer14.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer13"
+        xmlns:local="clr-namespace:ejer14"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="20">
-            <Label Content="Ingrese un número:" />
-            <TextBox x:Name="NumeroTextBox" />
-            <Button Content="Calcular Factorial" Click="CalcularFactorial_Click" Margin="0,10" />
-            <Label Content="Resultado:" />
-            <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" />
+            <Button Content="Calcular Media" Click="CalcularMedia_Click" Margin="0,10" />
+            <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" Height="250" VerticalScrollBarVisibility="Auto" />
         </StackPanel>
-
     </Grid>
 </Window>
