--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,15 +1,17 @@
-﻿<Window x:Class="ejer16.MainWindow"
+﻿<Window x:Class="ejer17.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer16"
+        xmlns:local="clr-namespace:ejer17"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="20">
-            <Button Content="Ingresar Caracteres" Click="IngresarCaracteres_Click" Margin="0,10" />
-            <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" Height="150" VerticalScrollBarVisibility="Auto" />
+            <Label Content="Ingrese un número:" />
+            <TextBox x:Name="NumeroTextBox" />
+            <Button Content="Verificar" Click="Verificar_Click" Margin="0,10" />
+            <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" />
         </StackPanel>
     </Grid>
 </Window>
