--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,15 @@
-﻿<Window x:Class="ejer18.MainWindow"
+﻿<Window x:Class="ejer19.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer18"
+        xmlns:local="clr-namespace:ejer19"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <StackPanel Margin="20">
+            <Button Content="Iniciar Procesos" Click="IniciarProcesos_Click" Margin="0,10" />
+            <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" Height="250" VerticalScrollBarVisibility="Auto" />
+        </StackPanel>
     </Grid>
 </Window>
