--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,16 +1,21 @@
-﻿<Window x:Class="ejer21.MainWindow"
+﻿<Window x:Class="ejer22.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer21"
+        xmlns:local="clr-namespace:ejer22"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="20">
-            <Button Content="Iniciar Procesos" Click="IniciarProcesos_Click" Margin="0,10" />
-            <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" Height="250" VerticalScrollBarVisibility="Auto" />
+            <Label Content="Lado A:" />
+            <TextBox x:Name="LadoATextBox" />
+            <Label Content="Lado B:" />
+            <TextBox x:Name="LadoBTextBox" />
+            <Label Content="Lado C:" />
+            <TextBox x:Name="LadoCTextBox" />
+            <Button Content="Calcular Área" Click="CalcularArea_Click" Margin="0,10" />
+            <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" />
         </StackPanel>
-
     </Grid>
 </Window>
