--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,20 +1,18 @@
-﻿<Window x:Class="ejer22.MainWindow"
+﻿<Window x:Class="ejer23.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer22"
+        xmlns:local="clr-namespace:ejer23"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="20">
-            <Label Content="Lado A:" />
-            <TextBox x:Name="LadoATextBox" />
-            <Label Content="Lado B:" />
-            <TextBox x:Name="LadoBTextBox" />
-            <Label Content="Lado C:" />
-            <TextBox x:Name="LadoCTextBox" />
-            <Button Content="Calcular Área" Click="CalcularArea_Click" Margin="0,10" />
+            <Label Content="Cateto A:" />
+            <TextBox x:Name="CatetoATextBox" />
+            <Label Content="Cateto B:" />
+            <TextBox x:Name="CatetoBTextBox" />
+            <Button Content="Calcular Hipotenusa" Click="CalcularHipotenusa_Click" Margin="0,10" />
             <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" />
         </StackPanel>
     </Grid>
