--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,19 +1,17 @@
-﻿<Window x:Class="ejer24.MainWindow"
+﻿<Window x:Class="ejer25.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer24"
+        xmlns:local="clr-namespace:ejer25"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="20">
-            <Label Content="Cateto A:" />
-            <TextBox x:Name="CatetoATextBox" />
-            <Label Content="Cateto B:" />
-            <TextBox x:Name="CatetoBTextBox" />
-            <Button Content="Calcular Hipotenusa" Click="CalcularHipotenusa_Click" Margin="0,10" />
-            <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" />
+            <Label Content="Radio:" />
+            <TextBox x:Name="RadioTextBox" />
+            <Button Content="Calcular" Click="Calcular_Click" Margin="0,10" />
+            <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" Height="150" VerticalScrollBarVisibility="Auto" />
         </StackPanel>
     </Grid>
 </Window>
