--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,17 +1,15 @@
-﻿<Window x:Class="ejer27.MainWindow"
+﻿<Window x:Class="ejer28.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer27"
+        xmlns:local="clr-namespace:ejer28"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="20">
-            <Label Content="Ingrese el numero enesimo:" />
-            <TextBox x:Name="NumeroTextBox" />
-            <Button Content="Calcular Suma" Click="CalcularSuma_Click" Margin="0,10" />
-            <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" Height="100" VerticalScrollBarVisibility="Auto" />
+            <Button Content="Ingresar Egresos" Click="IngresarEgresos_Click" Margin="0,10" />
+            <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" Height="150" VerticalScrollBarVisibility="Auto" />
         </StackPanel>
     </Grid>
 </Window>
