--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,14 +1,18 @@
-﻿<Window x:Class="ejer28.MainWindow"
+﻿<Window x:Class="ejer29.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ejer28"
+        xmlns:local="clr-namespace:ejer29"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="20">
-            <Button Content="Ingresar Egresos" Click="IngresarEgresos_Click" Margin="0,10" />
+            <Label Content="Nota 1:" />
+            <TextBox x:Name="Nota1TextBox" />
+            <Label Content="Nota 2:" />
+            <TextBox x:Name="Nota2TextBox" />
+            <Button Content="Calcular Promedio" Click="CalcularPromedio_Click" Margin="0,10" />
             <TextBox x:Name="ResultadoTextBox" IsReadOnly="True" Height="150" VerticalScrollBarVisibility="Auto" />
         </StackPanel>
     </Grid>
